--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -1,18 +1,21 @@
-@import url(<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">);
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
-:root{
- --cor-principal: #2937FA;
- --cor1: #5E28FA;
- --cor2: #2878FA;
- --cor3: #53C9FC;
- --preto: #000000;
- --branco: #ffffff;
+:root {
+    --cor-principal: #262597;
+    --cor1: #6c6091;
+    --cor2: #f7ebff;
+    --cor3: #68baa6;
+    --preto: #000000;
+    --branco: #FFFFFF;
 }
 
-
 body {
-    font-size: 1em;
-    font-family: 'montserrat'; 
+    font-size: 1rem;
+    font-family: 'Montserrat'; /*o nome da sua fonte*/
+}
+
+#contato {
+    background: var(--cor-principal);
+    background-size: cover;
+    padding: 4rem 0;
 }
