--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -1,26 +1,39 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root {
+    --cor-principal: #262597;
+    --cor1: #6c6091;
+    --cor2: #f7ebff;
+    --cor3: #68baa6;
+    --preto: #000000;
+    --branco: #FFFFFF;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    background-color: #f4f4f4;
+    font-size: 1rem;
+    font-family: 'Montserrat'; /*o nome da sua fonte*/
 }
-.container {
-    max-width: 800px;
-    margin: 20px auto;
-    background: white;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
+#contato {
+    background: var(--cor-principal);
+    background-size: cover;
+    padding: 4rem 0;
+}
+
+.formulario{
+    background-color: var(--branco);
+    padding: 2rem;
     border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    font-weight: bold;
 }
-img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
+
+.formulario button {
+    background-color: var(--cor3);
+    border: none;
+    font-weight: bold;
 }
-h1 {
-    color: #333;
-}
-.car {
-    margin-bottom: 20px;
+
+.form-control {
+    background-color: var(--cor2);
 }
