--- a/style.css
+++ b/style.css
@@ -130,3 +130,39 @@ header {
     display: none;
 }
 
+.alto-contraste {
+    background-color: var(--preto);
+    color: var(--branco);
+}
+
+.alto-contraste header,
+.alto-contraste footer,
+.alto-contraste .formulario {
+    background-color: (--preto);
+    color: var(--branco);
+}
+
+.alto-contraste .nav-link {
+    color: var(--cor-principal);
+}
+
+    .alto-contraste .botao-inicio,
+    .alto-contraste .formulario button,
+    .alto-contraste .btn-primary {
+        background-color: var(--rosa);
+        color: var(--preto);
+    }
+
+    .alto-contraste #Carros {
+        background: none;
+    }
+
+.alto-contraste #galeria {
+    background-color: var(--preto);
+}
+
+.alto-contraste .fundo-galeria {
+    background: none;
+}
+
+
