--- a/style.css
+++ b/style.css
@@ -102,19 +102,17 @@ header {
 .form-control {
     background-color: var(--cor2);
 }
+.menu-acessibilidade {
+    position: fixed;
+    top: 2rem;
+    right: 20px;
+    z-index: 1000;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
+.rotacao-botao {
+    transform: rotate(-90deg);
+    transform-origin: right center;
+}
 
 .opcoes-acessibilidade {
     margin-top: 10px;
